//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.rpc.proxy;

message SingletonMessage {
  enum Type {
    WINDOW_MESSAGE = 0;
    RECONNECT = 1;
    RESEND = 2;
    SETUP_PROVIDER = 3;
    PROVIDER_READY = 4;
    SETUP_PROXY = 5;
    PROXY_READY = 6;
    PORT_CLOSING = 7;
    PROVIDER_MESSAGE = 8;
    PROXY_MESSAGE = 9;
  }

  message Reconnect {
    int32 attempt = 1;
  }

  message Resend {
    SingletonMessage message = 1;
  }

  message SetupProvider {}

  message ProviderReady {}

  message SetupProxy {
    int32 source_id = 1;
  }

  message ProxyReady {
    int32 source_id = 1;
  }

  message PortClosing {}

  message ProviderMessage {
    int32 source_id = 1;
    bytes data = 2;
  }

  message ProxyMessage {
    int32 source_id = 1;
    bytes data = 2;
  }

  Type type = 1;

  oneof content {
    bytes data = 10;
    Reconnect reconnect = 11;
    Resend resend = 12;
    SetupProvider setup_provider = 13;
    ProviderReady provider_ready = 14;
    SetupProxy setup_proxy = 15;
    ProxyReady proxy_ready = 16;
    PortClosing port_closing = 17;
    ProviderMessage provider_message = 18;
    ProxyMessage proxy_message = 19;
  }
}
